Fix spacing for sidebar Grid layout

--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@
 
 /*SIDEBAR*/
 
+.logo {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    margin: 10px 0 20px 10px;
+}
+
 .sidebar {
     background-color: rgb(58, 169, 213);
     color: white;
     grid-area: 1 / 1 / 3 / 2;
-}
-
-.sidebar h3 {
-    margin: 10px 0 20px 10px;
 }
 
 .sidebar ul {
@@ -49,6 +51,7 @@
     grid: repeat(3, 1fr) / 1fr 4fr;
 }
 
+.logo h3,
 .sidebar li:nth-child(even) {
     padding-left: 10px;
 }
